<resources>
    <string name="app_name">Turtlify</string>

<!--    Settings Screen-->
    <string name="language">Language</string>
    <string name="faq">FAQ &amp; Help</string>
    <string name="suggestion">Suggestion</string>
    <string name="about">About</string>
    <string name="share">Share this app</string>
    <string name="dark_mode">Dark Mode</string>

<!--    About Screen-->
    <string name="about_version">Turtlify v1.0</string>
    <string name="about_desc_app">Instantly Identify Turtles</string>
    <string name="our_mission_title">Our Mission</string>
    <string name="our_mission_desc">We realise that some turtle and tortoise species are facing the threat of extinction, but public awareness about this issue is still very low. Many people often capture turtles and tortoises to keep as pets or for consumption, without paying attention to whether these species are protected or not. Furthermore, the issue of turtles being found in waters that should not be their habitat is also a crucial problem for the survival of these species. Turtlify provides easily accessible and engaging information about turtles and tortoises, So we can increase public awareness of the importance of protecting these species.</string>
    <string name="soc_media_title">Our Social Media</string>
    <string name="soc_media_instagram">Turtlify</string>
    <string name="soc_media_twitter">Turtlify</string>
    <string name="soc_media_linkedin">Turtlify</string>

<!--    Suggestion Screen-->
    <string name="feedback_title">Give us feedback so we can get better</string>
    <string name="feedback_radio_title">Feedback type</string>
    <string name="edit_text_email_hint">Input your email</string>
    <string name="edit_text_feedback_hint">Input your feedback</string>
    <string name="submit_feedback">Submit</string>
    <string name="rb_issue">Technical Issue</string>
    <string name="rb_feedback">General Feedback</string>
    <string name="rb_feature">Feature Requests</string>
    <string name="rb_content">Content Suggestions</string>

<!--    FAQ Screen-->
    <string name="message_title">Still need help? Contact our support team</string>
    <string name="submit_message">Send a message</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_maps">Maps</string>
    <string name="title_camera">Camera</string>
    <string name="title_report_turtle">Report</string>
    <string name="title_history">History</string>
    <string name="select">Select item</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

<!--    Activity Title-->
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_location_selector">LocationSelectorActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_suggestion">Suggestion</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_faq">FAQ &amp; Help</string>
    <string name="title_activity_instruction">Instruction</string>
    <string name="title_activity_encyclopedia">Encyclopedia</string>
    <string name="title_activity_encyclopedia_detail">Encyclopedia detail</string>

<!--    Home Screen-->
    <string name="searchbar_hint">Search Turtles</string>
    <string name="encyclopedia">Encyclopedia</string>
    <string name="image_description">Turtle</string>
    <string name="news">News</string>

<!--    Instruction-->
    <string name="how_to_use_title">How to use Turtlify</string>
    <string name="how_to_use_content">To start identify a turtle simply take a picture of the turtle or select a picture of turtle from your “Photos” and Turtlify will identify it instantly</string>
    <string name="tips_title">Tips for Identifying</string>
    <string name="tips_desc">A clear shot of turtle with proper angle and distance will help us identify turtles more accurately.</string>
    <string name="tips_1">1. Focus the turtle at the center of the frame</string>
    <string name="tips_2">2. If there are several turtles, just focus on single turtle</string>
    <string name="tips_3">3. Avoid getting to close, just make sure the whole body of turtle are clear and complete</string>
    <string name="tips_4">4. Avoid dark or blurry image.</string>
    <string name="remember_title">Remember</string>
    <string name="remember_1"> Don’t hurt any turtles</string>
    <string name="remember_2">Pay attention to surrounding environment and stay safe when taking pictures</string>
    <string name="remember_3">Don’t touch any unknown wild turtles, because some may be dangerous</string>
    <string name="title_activity_news">News Detail</string>
    <string name="edit_text_help_hint">Describe your help</string>

<!--    Warning Text-->
    <string name="empty_image_warning">Please take a picture or choose image from gallery first</string>

<!--    Content Description-->
    <string name="logo_image_description">Logo image</string>
    <string name="setting_logo_description">setting logo</string>
    <string name="instruction_screen_button">instruction screen button</string>

</resources>