<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/baseline_map_24"
        android:title="@string/title_maps" />

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/baseline_camera_alt_24"
        android:title="@string/title_camera" />

    <item
        android:id="@+id/navigation_report_turtle"
        android:icon="@drawable/baseline_report_24"
        android:title="@string/title_report_turtle" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/baseline_history_24"
        android:title="@string/title_history" />
</menu>