<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkit.turtlify.ui.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <activity
        android:id="@+id/navigation_maps"
        android:name="com.bangkit.turtlify.ui.activities.MapsActivity"
        android:label="@string/title_maps"
        tools:layout="@layout/activity_maps" />

    <activity
        android:id="@+id/navigation_camera"
        android:name="com.bangkit.turtlify.ui.activities.CameraActivity"
        android:label="@string/title_camera"
        tools:layout="@layout/activity_camera" />

    <fragment
        android:id="@+id/navigation_report_turtle"
        android:name="com.bangkit.turtlify.ui.fragments.ReportTurtleFragment"
        android:label="@string/title_report_turtle"
        tools:layout="@layout/fragment_report_turtle" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.bangkit.turtlify.ui.fragments.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />
</navigation>